# alguns_testes

./: .gitignore  README.md  testes.ipynb
C/001/: aritmetica.c  aritmetica.h  main  main.c
C/001/output/: main
C/002/: main  main.c
C/002/output/: main
http/: server.py  test.py
lang1/desprotegido/: main.py
lang1/protegido1/: client.py  main.py  server.py
lang2/: main.py
predicao1/: app.py  pyproject.toml
