[project]
name = "model1"
version = "0.1.0"
description = ""
authors = [
    {name = "iconoclasst",email = "davi09bezerra70@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "scikit-learn (>=1.9.0,<2.0.0)",
    "streamlit (>=1.58.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "model1", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.3.0,<8.0.0)"
]
